--- a/project1.py.ipynb
+++ b/project1.py.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -43,128 +43,106 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Main() starts calling doc string and argparse which helps to select the input file, which can be a single file or a list of files separeted by commas."
+    "Gaussian function to reduce noise and add some blur"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def main():\n",
-    "    print __doc__\n",
-    "\n",
-    "    args = parser()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "    -------------------------------------------\n",
-      "    ----- Project 1 | Self-driving Car ND -----\n",
-      "    -----     Predicting Lane Lines       -----\n",
-      "    -------------------------------------------\n",
-      "    \n"
-     ]
-    }
-   ],
-   "source": [
-    "    print __doc__\n",
-    "\n",
-    "    args = parser()\n",
-    "\n",
-    "    # Opening video stream\n",
-    "    for f in args.file.split(','):\n",
-    "\n",
-    "        cap = cv2.VideoCapture(f)\n",
-    "\n",
-    "        while (cap.isOpened()):\n",
-    "\n",
-    "            ret, frame = cap.read()\n",
-    "\n",
-    "            # Define a kernel size and apply Gaussian smoothing\n",
-    "            blur_stream = gaussian(kernel_size=5, img=frame)\n",
-    "\n",
-    "            # Canny Edge detection\n",
-    "            stream_edges = canny(blur_stream)\n",
-    "\n",
-    "            # Next we'll create a masked edges image using cv2.fillPoly()\n",
-    "            mask = np.zeros_like(stream_edges)\n",
-    "            ignore_mask_color = 255\n",
-    "\n",
-    "            # This time we are defining a four sided polygon to mask\n",
-    "            vertices = polyg_4_vertices(imshape=frame.shape)\n",
-    "\n",
-    "            # Applying polygon\n",
-    "            cv2.fillPoly(mask, vertices, ignore_mask_color)\n",
-    "            masked_edges = cv2.bitwise_and(stream_edges, mask)\n",
-    "\n",
-    "            lines, line_image = hough_trans(frame, masked_edges)\n",
-    "\n",
-    "            # After hough transform, calculate moving average and add to image\n",
-    "            if lines is not None:\n",
-    "\n",
-    "                lane_lines = lanes_drawing(lines, frame.shape)\n",
-    "\n",
-    "                try:\n",
-    "                    for l in lane_lines:\n",
-    "                        all_lines = np.concatenate((all_lines, l))\n",
-    "                except Exception as e:\n",
-    "                    all_lines = np.concatenate(lane_lines)\n",
-    "                    print e\n",
-    "\n",
-    "                \n",
-    "                # smooth lines are returned to be added to image\n",
-    "                average_lines = smoothed_line(all_lines[::-1])\n",
-    "\n",
-    "                # This method directly prints every point to stream\n",
-    "                for line in average_lines:\n",
-    "                    for x1, y1, x2, y2 in line:\n",
-    "                        cv2.line(line_image, (x1, y1), (x2, y2), (0, 0, 255), 10)\n",
-    "\n",
-    "                # Create a \"color\" binary image to combine with line image\n",
-    "                # color_edges = np.dstack((stream_edges, stream_edges, stream_edges))\n",
-    "\n",
-    "                # Draw the lines on the edge image\n",
-    "                lines_edges = cv2.addWeighted(frame, 0.8, line_image, 1, 0)\n",
-    "\n",
-    "                cv2.imshow('frame', lines_edges)\n",
-    "\n",
-    "            elif lines is None:\n",
-    "                cv2.imshow('frame', frame)\n",
-    "\n",
-    "            if cv2.waitKey(15) & 0xFF == ord('q'):\n",
-    "                break\n",
-    "\n",
-    "        cap.release()\n",
-    "        cv2.destroyAllWindows()\n",
-    "\n",
-    "            "
+    "def gaussian(img, kernel_size=5):\n",
+    "    return cv2.GaussianBlur(img, (kernel_size, kernel_size), 0)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Argparse - insert list of videos to be processed"
+    "Border detection with Canny Edge Method"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def canny(blur_stream):\n",
+    "    low_threshold = 100\n",
+    "    high_threshold = 250\n",
+    "    return cv2.Canny(blur_stream, low_threshold, high_threshold)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Defining polygon vertices to mask Region of Interst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def polyg_4_vertices(imshape):\n",
+    "\n",
+    "    return np.array([[(imshape[1] / 10, imshape[0]), (imshape[1] / 2.5, imshape[0] / 1.5),\n",
+    "                      (imshape[1] / 1.6, imshape[0] / 1.5), (imshape[1] / 1.1, imshape[0])]],\n",
+    "                    dtype=np.int32)\n",
+    "\n",
+    "    # return np.array([[(0, imshape[0] / 1), (0, 0),\n",
+    "    #                   (imshape[1], 0), (imshape[1], imshape[0] / 1)]],\n",
+    "    #                 dtype=np.int32)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to get a smoother drawing, a moving average is calculated considering the last ten values. By doing that, bumpyness or undesirable noise are filtered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def smoothed_line(lines, mov_avg=10):\n",
+    "    if (lines.shape[0]) / 2 < mov_avg:\n",
+    "        mov_avg = lines.shape[0] / 2\n",
+    "\n",
+    "    x_left_min_smooth = int(np.mean(lines[0:len(lines):2, 0][0:mov_avg]))\n",
+    "    y_left_min_smooth = int(np.mean(lines[0:len(lines):2, 1][0:mov_avg]))\n",
+    "\n",
+    "    x_left_man_smooth = int(np.mean(lines[0:len(lines):2, 2][0:mov_avg]))\n",
+    "    y_left_man_smooth = int(np.mean(lines[0:len(lines):2, 3][0:mov_avg]))\n",
+    "\n",
+    "    x_right_min_smooth = int(np.mean(lines[1:len(lines):2, 0][0:mov_avg]))\n",
+    "    y_right_min_smooth = int(np.mean(lines[1:len(lines):2, 1][0:mov_avg]))\n",
+    "\n",
+    "    x_right_man_smooth = int(np.mean(lines[1:len(lines):2, 2][0:mov_avg]))\n",
+    "    y_right_man_smooth = int(np.mean(lines[1:len(lines):2, 3][0:mov_avg]))\n",
+    "\n",
+    "    return np.array([[[x_left_min_smooth, y_left_min_smooth, x_left_man_smooth, y_left_man_smooth],\n",
+    "                      [x_right_min_smooth, y_right_min_smooth, x_right_man_smooth, y_right_man_smooth]]])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -187,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -232,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -329,40 +307,129 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to get a smoother drawing, a moving average is calculated considering the last ten values. By doing that, bumpyness or undesirable noise are filtered"
+    "Main() starts calling doc string and argparse which helps to select the input file, which can be a single file or a list of files separeted by commas."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def smoothed_line(lines, mov_avg=10):\n",
-    "    if (lines.shape[0]) / 2 < mov_avg:\n",
-    "        mov_avg = lines.shape[0] / 2\n",
+    "def main():\n",
+    "    print __doc__\n",
     "\n",
-    "    x_left_min_smooth = int(np.mean(lines[0:len(lines):2, 0][0:mov_avg]))\n",
-    "    y_left_min_smooth = int(np.mean(lines[0:len(lines):2, 1][0:mov_avg]))\n",
-    "\n",
-    "    x_left_man_smooth = int(np.mean(lines[0:len(lines):2, 2][0:mov_avg]))\n",
-    "    y_left_man_smooth = int(np.mean(lines[0:len(lines):2, 3][0:mov_avg]))\n",
-    "\n",
-    "    x_right_min_smooth = int(np.mean(lines[1:len(lines):2, 0][0:mov_avg]))\n",
-    "    y_right_min_smooth = int(np.mean(lines[1:len(lines):2, 1][0:mov_avg]))\n",
-    "\n",
-    "    x_right_man_smooth = int(np.mean(lines[1:len(lines):2, 2][0:mov_avg]))\n",
-    "    y_right_man_smooth = int(np.mean(lines[1:len(lines):2, 3][0:mov_avg]))\n",
-    "\n",
-    "    return np.array([[[x_left_min_smooth, y_left_min_smooth, x_left_man_smooth, y_left_man_smooth],\n",
-    "                      [x_right_min_smooth, y_right_min_smooth, x_right_man_smooth, y_right_man_smooth]]])\n"
+    "    args = parser()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Argparse - insert list of videos to be processed, for Jupyter notebook version it's commented and loaded files are all mp4 videos from project initial commit."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    -------------------------------------------\n",
+      "    ----- Project 1 | Self-driving Car ND -----\n",
+      "    -----     Predicting Lane Lines       -----\n",
+      "    -------------------------------------------\n",
+      "    \n",
+      "challenge.mp4\n"
+     ]
+    }
+   ],
+   "source": [
+    "    print __doc__\n",
+    "\n",
+    "    # args = parser()\n",
+    "\n",
+    "    # Opening video stream\n",
+    "    for f in ['challenge.mp4']:\n",
+    "        \n",
+    "        cap = cv2.VideoCapture(f)\n",
+    "\n",
+    "        while (cap.isOpened()):\n",
+    "\n",
+    "            ret, frame = cap.read()\n",
+    "\n",
+    "            # Define a kernel size and apply Gaussian smoothing\n",
+    "            blur_stream = gaussian(kernel_size=5, img=frame)\n",
+    "\n",
+    "            # Canny Edge detection\n",
+    "            stream_edges = canny(blur_stream)\n",
+    "\n",
+    "            # Next we'll create a masked edges image using cv2.fillPoly()\n",
+    "            mask = np.zeros_like(stream_edges)\n",
+    "            ignore_mask_color = 255\n",
+    "\n",
+    "            # This time we are defining a four sided polygon to mask\n",
+    "            vertices = polyg_4_vertices(imshape=frame.shape)\n",
+    "\n",
+    "            # Applying polygon\n",
+    "            cv2.fillPoly(mask, vertices, ignore_mask_color)\n",
+    "            masked_edges = cv2.bitwise_and(stream_edges, mask)\n",
+    "\n",
+    "            lines, line_image = hough_trans(frame, masked_edges)\n",
+    "\n",
+    "            # After hough transform, calculate moving average and add to image\n",
+    "            if lines is not None:\n",
+    "\n",
+    "                lane_lines = lanes_drawing(lines, frame.shape)\n",
+    "\n",
+    "                try:\n",
+    "                    for l in lane_lines:\n",
+    "                        all_lines = np.concatenate((all_lines, l))\n",
+    "                except Exception as e:\n",
+    "                    all_lines = np.concatenate(lane_lines)\n",
+    "                    # print e\n",
+    "\n",
+    "                \n",
+    "                # smooth lines are returned to be added to image\n",
+    "                average_lines = smoothed_line(all_lines[::-1])\n",
+    "\n",
+    "                # This method directly prints every point to stream\n",
+    "                for line in average_lines:\n",
+    "                    for x1, y1, x2, y2 in line:\n",
+    "                        cv2.line(line_image, (x1, y1), (x2, y2), (0, 0, 255), 10)\n",
+    "\n",
+    "                # Create a \"color\" binary image to combine with line image\n",
+    "                # color_edges = np.dstack((stream_edges, stream_edges, stream_edges))\n",
+    "\n",
+    "                # Draw the lines on the edge image\n",
+    "                lines_edges = cv2.addWeighted(frame, 0.8, line_image, 1, 0)\n",
+    "\n",
+    "                cv2.imshow('frame', lines_edges)\n",
+    "\n",
+    "            elif lines is None:\n",
+    "                cv2.imshow('frame', frame)\n",
+    "\n",
+    "            if cv2.waitKey(15) & 0xFF == ord('q'):\n",
+    "                break\n",
+    "\n",
+    "        cap.release()\n",
+    "        cv2.destroyAllWindows()\n",
+    "        \n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
