--- a/project.ipynb
+++ b/project.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -129,7 +129,8 @@
    "source": [
     "def smoothed_line(lines, mov_avg=10):\n",
     "    if (lines.shape[0]) / 2 < mov_avg:\n",
-    "        mov_avg = lines.shape[0] / 2\n",
+    "        mov_avg = int(lines.shape[0] / 2)\n",
+    "\n",
     "\n",
     "    x_left_min_smooth = int(np.mean(lines[0:len(lines):2, 0][0:mov_avg]))\n",
     "    y_left_min_smooth = int(np.mean(lines[0:len(lines):2, 1][0:mov_avg]))\n",
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -217,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -324,7 +325,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -335,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -343,7 +346,7 @@
    "outputs": [],
    "source": [
     "def main():\n",
-    "    print (__doc__)\n",
+    "    # print (__doc__)\n",
     "    #args = parser()\n",
     "    \n",
     "    # Opening video stream\n",
@@ -418,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -480,7 +483,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
